Рефактор добавил все описания к модулям и убрали лишнее переделал все префиксы в клиенте починил нейм протект упростил код там где нужно